--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body{padding:20px;font:14px "Lucida Grande",Helvetica,Arial sans-serif;background:#fff;color:#000}
 a{margin:10px;color:#20b2aa}
-p{padding:0;margin:0;text-align:center;position:relative}
+div p{padding:0;margin:0;text-align:center;position:relative}
 #drop-area{height:100%;width:10%;position:absolute;top:0;right:0;z-index:2;}
 #drop-area .drop{display:block}
 .drag{width:100px;height:100px;border-radius:50px;position:absolute;z-index:5;opacity:.5}
