feat(layout): allow to add code to head of html page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,7 @@ html
     link(rel='stylesheet', href='/css/style.css')
     if settings.env === 'development'
       script(type='text/javascript', src='//' + settings.ip + ':35729/livereload.js')
+
+    block head
   body
     block content
