feat(style): change opacity of element to be opacity of color

--- a/views/css/style.styl
+++ b/views/css/style.styl
@@ -32,26 +32,25 @@ div p
   border-radius 50px
   position absolute
   z-index 5
-  opacity 0.5
 .ball1
 #ball1
-  background green
+  background #00800080
   top 250px
   left 50px
 .ball2
 #ball2
-  background red
+  background #ff000080
   top 250px
   left 175px
 .ball3
 #ball3
-  background blue
+  background #0000ff80
   color white
   top 375px
   left 50px
 .ball4
 #ball4
-  background yellow
+  background #ffff0080
   color black
   top 375px
   left 175px
