--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,8 +3,8 @@ a{margin:10px;color:#20b2aa}
 div p{padding:0;margin:0;text-align:center;position:relative}
 #drop-area{height:100%;width:10%;position:absolute;top:0;right:0;z-index:2;}
 #drop-area .drop{display:block}
-.drag{width:100px;height:100px;border-radius:50px;position:absolute;z-index:5;opacity:.5}
-.ball1,#ball1{background:#008000;top:250px;left:50px}
-.ball2,#ball2{background:#f00;top:250px;left:175px}
-.ball3,#ball3{background:#00f;color:#fff;top:375px;left:50px}
-.ball4,#ball4{background:#ff0;color:#000;top:375px;left:175px}
+.drag{width:100px;height:100px;border-radius:50px;position:absolute;z-index:5}
+.ball1,#ball1{background:rgba(0,128,0,0.502);top:250px;left:50px}
+.ball2,#ball2{background:rgba(255,0,0,0.502);top:250px;left:175px}
+.ball3,#ball3{background:rgba(0,0,255,0.502);color:#fff;top:375px;left:50px}
+.ball4,#ball4{background:rgba(255,255,0,0.502);color:#000;top:375px;left:175px}
