feat(style): change way to specify color

--- a/views/css/style.styl
+++ b/views/css/style.styl
@@ -34,23 +34,23 @@ div p
   z-index 5
 .ball1
 #ball1
-  background #00800080
+  background rgba(#008000, 0.5)
   top 250px
   left 50px
 .ball2
 #ball2
-  background #ff000080
+  background rgba(#ff0000, 0.5)
   top 250px
   left 175px
 .ball3
 #ball3
-  background #0000ff80
+  background rgba(#0000ff, 0.5)
   color white
   top 375px
   left 50px
 .ball4
 #ball4
-  background #ffff0080
+  background rgba(#ffff00, 0.5)
   color black
   top 375px
   left 175px
