chore(style): add mix-in for dimensions of objects

--- a/views/css/style.styl
+++ b/views/css/style.styl
@@ -1,3 +1,7 @@
+dimensions(w, h)
+  width w
+  height h
+
 body
   padding 20px
   font 14px "Lucida Grande", Helvetica, Arial sans-serif
@@ -17,8 +21,7 @@ div p
   position relative
 
 #drop-area
-  height 100%
-  width 10%
+  dimensions 10% 100%
   position absolute
   top 0
   right 0
