--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 body{padding:20px;font:14px "Lucida Grande",Helvetica,Arial sans-serif;background:#fff;color:#000}
 a{margin:10px;color:#20b2aa}
 div p{padding:0;margin:0;text-align:center;position:relative}
-#drop-area{height:100%;width:10%;position:absolute;top:0;right:0;z-index:2;}
+#drop-area{width:10%;height:100%;position:absolute;top:0;right:0;z-index:2;}
 #drop-area .drop{display:block}
 .drag{width:100px;height:100px;border-radius:50px;position:absolute;z-index:5}
 .ball1,#ball1{background:rgba(0,128,0,0.5);top:250px;left:50px}
