--- a/views/share.jade
+++ b/views/share.jade
@@ -8,7 +8,7 @@ block content
   a(href='/') Root
 
   - for (var i = 1; i <= 4; i++)
-    div(class='drag', class='ball' + i, id='ball' + i)
+    div(class='drag', id='ball' + i)
       p.id #{i}
 
   #drop-area
