--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,56 @@
-body{padding:20px;font:14px "Lucida Grande",Helvetica,Arial sans-serif;background:#fff;color:#000}
-a{margin:10px;color:#20b2aa}
-div p{padding:0;margin:0;text-align:center;position:relative}
-#drop-area{width:10%;height:100%;position:absolute;top:0;right:0;z-index:2;}
-#drop-area .drop{display:block}
-.drag{width:100px;height:100px;border-radius:50px;position:absolute;z-index:5}
-#ball1{background:rgba(0,128,0,0.5);top:250px;left:50px}
-#ball2{background:rgba(255,0,0,0.5);top:250px;left:175px}
-#ball3{background:rgba(0,0,255,0.5);color:#fff;top:375px;left:50px}
-#ball4{background:rgba(255,255,0,0.5);color:#000;top:375px;left:175px}
+body {
+  padding: 20px;
+  font: 14px "Lucida Grande", Helvetica, Arial sans-serif;
+  background: #fff;
+  color: #000;
+}
+a {
+  margin: 10px;
+  color: #20b2aa;
+}
+div p {
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  position: relative;
+}
+#drop-area {
+  width: 10%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+}
+#drop-area .drop {
+  display: block;
+}
+.drag {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  position: absolute;
+  z-index: 5;
+}
+#ball1 {
+  background: rgba(0,128,0,0.5);
+  top: 250px;
+  left: 50px;
+}
+#ball2 {
+  background: rgba(255,0,0,0.5);
+  top: 250px;
+  left: 175px;
+}
+#ball3 {
+  background: rgba(0,0,255,0.5);
+  color: #fff;
+  top: 375px;
+  left: 50px;
+}
+#ball4 {
+  background: rgba(255,255,0,0.5);
+  color: #000;
+  top: 375px;
+  left: 175px;
+}
