feat(index): remove index page, make share be default

--- a/circles/views/share.jade
+++ b/circles/views/share.jade
@@ -5,7 +5,7 @@ block content
   h2 User tag:
     span#userID
 
-  a(href='/') Root
+  a(href='/mirror') Mirror mode
 
   - for (var i = 1; i <= 4; i++)
     div(class='drag', id='ball' + i)
