--- a/circles/views/mirror.jade
+++ b/circles/views/mirror.jade
@@ -5,7 +5,7 @@ block content
   h2 User tag:
     span#userID
 
-  a(href='/') Root
+  a(href='/share') Share mode
 
   - for (var i = 1; i <= 4; i++)
     div(class='drag', id='ball' + i, data-lock="")
