--- a/locationPhotoSharing/public/css/style.css
+++ b/locationPhotoSharing/public/css/style.css
@@ -1,18 +1,45 @@
 body {
-  padding: 20px;
   font: 14px "Lucida Grande", Helvetica, Arial sans-serif;
   background: #fff;
   color: #000;
 }
-#drop-area {
+div {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+#body {
+  position: relative;
+  height: 800px;
+}
+.header-content,
+.footer-content {
+  width: 100%;
+  height: 70px;
+  position: static;
+  top: 0;
+  left: 0;
+}
+.left {
+  width: 10%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.right {
   width: 10%;
   height: 100%;
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 2;
 }
-#drop-area .drop {
+#center {
+  position: static;
+  max-width: 80%;
+  margin: 0 auto;
+}
+.drop {
   display: block;
 }
 img {
@@ -24,19 +51,32 @@ img {
   z-index: 5;
   position: absolute;
 }
-#img1 {
-  top: 200px;
+#img-1 {
+  top: 250px;
   left: 100px;
 }
-#img2 {
-  top: 300px;
+#img-2 {
+  top: 350px;
   left: 450px;
 }
-#img3 {
-  top: 450px;
+#img-3 {
+  top: 500px;
   left: 150px;
 }
-#img4 {
-  top: 550px;
+#img-4 {
+  top: 600px;
   left: 400px;
+}
+#locator {
+  position: absolute;
+  top: 100px;
+  left: 700px;
+}
+#locator td {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #000;
+  text-align: right;
+  vertical-align: bottom;
+  font-size: 10px;
 }
