--- a/locationPhotoSharing/views/css/style.styl
+++ b/locationPhotoSharing/views/css/style.styl
@@ -1,18 +1,48 @@
+boxSizing()
+  -webkit-box-sizing arguments
+  -moz-box-sizing arguments
+  box-sizing arguments
+
 body
-  padding 20px
   font 14px "Lucida Grande", Helvetica, Arial sans-serif
   background white
   color black
 
-#drop-area
+div
+  boxSizing(border-box)
+
+#body
+  position relative
+  height 800px
+
+.header-content, .footer-content
+  width 100%
+  height 70px
+  position static
+  top 0
+  left 0
+
+.left
+  width 10%
+  height 100%
+  position absolute
+  top 0
+  left 0
+
+.right
   width 10%
   height 100%
   position absolute
   top 0
   right 0
-  z-index: 2;
-  .drop
-    display block
+
+#center
+  position static
+  max-width 80%
+  margin 0 auto
+
+.drop
+  display block
 
 img
   margin 5px
@@ -23,18 +53,30 @@ img
   z-index 5
   position absolute
 
-#img1
-  top 200px
+#img-1
+  top 250px
   left 100px
 
-#img2
-  top 300px
+#img-2
+  top 350px
   left 450px
 
-#img3
-  top 450px
+#img-3
+  top 500px
   left 150px
 
-#img4
-  top 550px
+#img-4
+  top 600px
   left 400px
+
+#locator
+  position absolute
+  top 100px
+  left 700px
+  td
+    width 40px
+    height 40px
+    border 1px solid black
+    text-align right
+    vertical-align bottom
+    font-size 10px
