--- a/locationPhotoSharing/views/picShare.jade
+++ b/locationPhotoSharing/views/picShare.jade
@@ -1,13 +1,27 @@
 extends layout
 
 block content
-  h1 Drag pictures and drop them to other devices
-  h2 User tag:
-    span#userID
+  #header
+    .drop-area.header-content#drop1
+
+  #body
+    .drop-area.left#drop2
+    #center
+      h1 Drag pictures and drop them to other devices
+      h2 User tag:
+        span#userID
+      table#locator
+        - for (var i = 0; i < 2; i++)
+          tr
+            - for (var j = 0; j < 2; j++)
+              - var val = 2 * i + j + 1
+              td(id = 'quadrant-' + val)= val
+    .drop-area.right#drop3
+
+  #footer
+    .drop-area.footer-content#drop4
 
   - for (var i = 1; i <= 4; i++)
-    img.drag(src='/img/img' + i + '.jpg', id='img' + i)
-
-  #drop-area
+    img.drag(src='/img/img' + i + '.jpg', id='img-' + i)
 
   script(data-main='/js/picShare.js', src='/js/require.js')
