feat(workspaceManager): add simple workspace manager
This workspace manages connection of new clients, disconnection of
existing client and screen resize of existing clients.
When some clients are connected or disconnected, other clients are
notified and moved on the large workspace area accordingly.

--- a/sharedWorkspace/views/css/style.styl
+++ b/sharedWorkspace/views/css/style.styl
@@ -21,24 +21,26 @@ a
   position absolute
   z-index 5
 
-// #ball1
-//   background rgba(#008000, 0.5)
-//   top 250px
-//   left 50px
-//
-// #ball2
-//   background rgba(#ff0000, 0.5)
-//   top 250px
-//   left 175px
-//
-// #ball3
-//   background rgba(#0000ff, 0.5)
-//   color white
-//   top 375px
-//   left 50px
-//
-// #ball4
-//   background rgba(#ffff00, 0.5)
-//   color black
-//   top 375px
-//   left 175px
+#ball1
+  background rgba(#008000, 0.5)
+  color black
+  top 250px
+  left 50px
+
+#ball2
+  background rgba(#ff0000, 0.5)
+  color black
+  top 250px
+  left 175px
+
+#ball3
+  background rgba(#0000ff, 0.5)
+  color white
+  top 375px
+  left 50px
+
+#ball4
+  background rgba(#ffff00, 0.5)
+  color black
+  top 375px
+  left 175px
