chore(style): use mixin for width and height

--- a/sharedWorkspace/views/css/style.styl
+++ b/sharedWorkspace/views/css/style.styl
@@ -16,8 +16,7 @@ a
   color lightseagreen
 
 .ball
-  width 100px
-  height 100px
+  dimensions 100px 100px
   border-radius 50px
   position absolute
   z-index 5
