feat(minimap): add canvas and styles for it
Preparations for minimap

--- a/sharedWorkspace/views/sharedWorkspace.jade
+++ b/sharedWorkspace/views/sharedWorkspace.jade
@@ -7,6 +7,8 @@ block content
     span.separator  - 
     span#mode
 
+  canvas#minimap
+
   script(src='/js/lib/jquery-1.10.2.js')
   script(src='/js/lib/hammer.js')
   script(src='/socket.io/socket.io.js')
