--- a/sharedWorkspace/public/css/style.css
+++ b/sharedWorkspace/public/css/style.css
@@ -9,6 +9,13 @@ a {
   margin: 5px;
   color: #20b2aa;
 }
+#minimap {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  right: 2%;
+  bottom: 2%;
+}
 .ball {
   width: 100px;
   height: 100px;
