--- a/sharedWorkspace/views/css/style.styl
+++ b/sharedWorkspace/views/css/style.styl
@@ -15,6 +15,12 @@ a
   margin 5px
   color lightseagreen
 
+#minimap
+  dimensions 100px 100px
+  position absolute
+  right 2%
+  bottom 2%
+
 .ball
   dimensions 100px 100px
   border-radius 50px
