--- a/sharedWorkspace/views/css/style.styl
+++ b/sharedWorkspace/views/css/style.styl
@@ -16,6 +16,8 @@ a
   color lightseagreen
 
 #minimap
+  border 1px dashed white
+  // border 1px dashed #c0c0c0
   position absolute
   right 2%
   bottom 2%
