feat(rst_wrkspc_btn): add button to reset screen
This resets screen to be with
x = 0, y = 0, w = width of screen, h = height of screen, s = 100

--- a/sharedWorkspaceWithRacer/views/sharedWorkspaceWithRacer.jade
+++ b/sharedWorkspaceWithRacer/views/sharedWorkspaceWithRacer.jade
@@ -6,6 +6,8 @@ block content
     span#userID
     span.separator  - 
     span#mode
+  p#controllers
+    button#rst_wrkspc_btn Reset workspace
 
   canvas#minimap
 
